--- a/html&css/Youtube/style_header.css
+++ b/html&css/Youtube/style_header.css
@@ -5,9 +5,12 @@
     border-bottom: 0.2px solid rgb(225, 225, 225);
     margin-bottom: 30px;
     gap:10px;
-    margin-left: 10px;
-    margin-right: 10px;
     padding:10px;
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    background-color: white;
 }
 .header-start{
     
