--- a/html&css/Youtube/general.css
+++ b/html&css/Youtube/general.css
@@ -2,8 +2,10 @@ body {
     font-family: Montserrat;
     margin:0px;
     padding-top:80px;
-    padding-left:100px;
+    padding-left:110px;
     padding-right: 20px;
+    background-color: rgb(248, 248, 248);
+    
 }
 
 p {
