--- a/html&css/Youtube/style_header.css
+++ b/html&css/Youtube/style_header.css
@@ -19,7 +19,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap:10px;
+    gap:50px;
+    padding-left:28px;
 
 }
 input{
@@ -29,7 +30,6 @@ input{
     padding:4px;
     font-size: 18px;
     border:none;
-    padding-left:15px;
 }
 input:focus{
     outline:none;
@@ -49,8 +49,9 @@ button{
 .search-icon{
     width:25px;
     padding:3px 18px 3px 18px;
-    border-left:1px solid rgb(211, 211, 211);;
+    border-left:1px solid rgb(211, 211, 211);
     background-color: rgb(235, 231, 231);
+    cursor: pointer;
 }
 
 .search{
@@ -67,18 +68,22 @@ button{
     flex-direction: row;
     align-items: center;
     gap:10px;
-    margin-left:100px;
+    margin-left:30px;
     
 }
 .header-end {
     display: flex;
     align-items: center; 
     gap: 18px;
-    flex-shrink: 0;           
+    flex-shrink: 0;  
+    padding-right: 10px;         
 }
 
 .profile {
     width: 35px;
+}
+.icon{
+    cursor: pointer;
 }
 
 .profile img {
