--- a/html&css/Youtube/style_video.css
+++ b/html&css/Youtube/style_video.css
@@ -61,3 +61,13 @@
     bottom:10px;
     right:10px;
 }
+@media (max-width: 750px) {
+    .grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media(max-width:500px){
+    .grid{
+        grid-template-columns: 1fr;
+    }
+}
